--- a/KolonApplication/KolonApplication.csproj
+++ b/KolonApplication/KolonApplication.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KolonLibrary\KolonLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
